bfd/coff64-rs6000.c
@@ -1426,6 +1426,8 @@ xcoff64_reloc_type_lookup (bfd *abfd ATTRIBUTE_UNUSED,
       return &xcoff64_howto_table[0];
     case BFD_RELOC_NONE:
       return &xcoff64_howto_table[0xf];
+    case BFD_RELOC_PPC_NEG:
+      return &xcoff64_howto_table[0x1];
     case BFD_RELOC_PPC64_TLSGD:
       return &xcoff64_howto_table[0x20];
     case BFD_RELOC_PPC64_TLSIE:
